python/testData/inspections/PyUnresolvedReferencesInspection/comprehensionScope33.py
xs = [x for x in range(10)]
<error descr="Unresolved reference 'x'">x</error> #fail